# uart-read-mac

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  list_uart_devices.py  print_log.py  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements-windows.txt  uart_mac_reader.py  uart_util.py
uart_mac_reader_pkg/: __init__.py
